Fixing some scrollbars

--- a/slides/app/components/FileTabs/FileTabs.scss
+++ b/slides/app/components/FileTabs/FileTabs.scss
@@ -2,6 +2,12 @@
 
 .tabs {
   border-bottom: $border-small solid $brand-primary;
+  height: $filetabs-height - $border-small;
+  white-space: nowrap;
+  overflow: hidden;
+  &:hover {
+    overflow-x: auto;
+  }
 }
 
 .tab, .tabActive {
