--- a/slides/app/components/SlidesList/SlidesList.scss
+++ b/slides/app/components/SlidesList/SlidesList.scss
@@ -8,6 +8,14 @@
   right: 0;
   margin: 0;
   padding-left: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  height: $slideslist-height;
+  white-space: nowrap;
+
+  &:hover {
+    overflow-x: auto;
+  }
 }
 
 .item, .itemActive {
