--- a/slides/app/slide/slide.scss
+++ b/slides/app/slide/slide.scss
@@ -1,13 +1,13 @@
 :global {
+  @import '../components/scrollbars.scss';
+
   .xp-slide {
     height: 100%;
-    min-height: 90vh;
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
-
 
     .xp-column {
       float: left;
@@ -16,5 +16,8 @@
       height: 100%;
       position: relative;
     }
+
+    @include scrollbars;
+
   }
 }
